# tech-test

./: .gitignore  docker-compose.yaml
backend/: .env.example  Dockerfile  dataset.json  manage.py  pyproject.toml
backend/actors/: admin.py  models.py  serializers.py  views.py
backend/actors/migrations/: 0001_initial.py  0002_actor_created_at.py
backend/common/: models.py  pagination_classes.py
backend/movies/: admin.py  models.py  serializers.py  tasks.py  views.py
backend/movies/migrations/: 0001_initial.py  0002_movie_created_at_review_created_at.py
backend/moviesmanager/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
frontend/: .env.example  Dockerfile  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: EditMovie.vue  MovieCard.vue  ShowMovie.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: Home.vue  Movie.vue  MovieList.vue
nginxserver/: nginx.conf
